Add hidden div elements to index.

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,13 @@ body {
 .medFont {
   font-size: larger;
 }
+
+#result1 {
+  display: none;
+}
+#result2 {
+  display: none;
+}
+#result3 {
+  display: none;
+}
