WIP: attempt word wrap within select option so that large strings appear in drop down.

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,30 @@ body {
   font-size: larger;
 }
 
+#firstQuestion {
+  width: 75%;
+}
+
+#secondQuestion {
+  width: 75%;
+}
+
+#thirdQuestion {
+  width: 75%;
+}
+
+#fourthQuestion {
+  width: 75%;
+}
+
+#fifthQuestion {
+  width: 75%;
+}
+
+.wordBreak {
+  word-wrap: normal;
+}
+
 #result1 {
   display: none;
 }
