--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,19 @@ body {
   font-size: larger;
 }
 
+.card {
+  float: left;
+  color: black;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 28%;
+  height: auto;
+}
+
 #firstQuestion {
   width: 75%;
 }
