--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,24 @@ body {
 }
 
 img {
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 .header {
   background-color: transparent;
 }
 
-.quiz {
+.box {
+  text-align: center;
+  padding: 50px;
+  color: rgb(108, 119, 150);
+  border: solid 2px black;
+  background-color: lightsteelblue;
   margin-top: 500px;
-  color: white;
+  margin-left: 125px;
+  margin-right: 125px;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
 }
 
 .centerMed {
@@ -52,27 +60,55 @@ img {
 
 #firstQuestion {
   width: 75%;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 #secondQuestion {
   width: 75%;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 #thirdQuestion {
   width: 75%;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 #fourthQuestion {
   width: 75%;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 #fifthQuestion {
   width: 75%;
-  height: 100%;
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
+
+#submitButton {
+  margin: 50px;
 }
 
 #result1 {
   display: none;
+}
+
+.jsImage {
+  border-radius: 50%;
+  float: center;  
+}
+
+.boxResults {
+  padding: 40px;
+  width: 900px;
+  height: 900px;
+  border-radius: 50%;
+  border: 2px solid black;
+  float: center;
+  margin: 200px;
 }
 
 #result2 {
