--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ img {
 }
 
 .header {
-  background-color: transparent;
+  margin-top: 200px;
 }
 
 .box {
@@ -20,6 +20,7 @@ img {
   margin-top: 500px;
   margin-left: 125px;
   margin-right: 125px;
+  margin-bottom: 100px;
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-style: normal;
 }
@@ -29,8 +30,9 @@ img {
   font-size: 16pt;
 }
 
-.pushRight {
+.boxUpper {
   text-align: right;
+  margin-bottom: 150px;
 }
 
 .headImage {
